FIX: Visual alignment

--- a/assets/stylesheets/common/knowledge-explorer.scss
+++ b/assets/stylesheets/common/knowledge-explorer.scss
@@ -16,7 +16,7 @@
    display: flex;
    .loading-container {
      display: flex;
-     flex-basis: 75%;
+     flex-basis: 100%;
      padding: 10px 0 10px 10px;
    }
    .knowledge-explorer-results {
